Add Docker Compose configuration and update application properties

--- a/neuro-forge_back/src/main/resources/application.properties
+++ b/neuro-forge_back/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=Neuro Forge
+spring.r2dbc.url=r2dbc:postgresql://localhost:5432/neuroforge_db
+spring.r2dbc.username=neuroforge_user
+spring.r2dbc.password=neuroforge_password
