--- a/neuro-forge_back/src/main/resources/application.properties
+++ b/neuro-forge_back/src/main/resources/application.properties
@@ -1,4 +1,12 @@
 spring.application.name=Neuro Forge
-spring.r2dbc.url=r2dbc:postgresql://localhost:5432/neuroforge_db
+spring.r2dbc.url=r2dbc:postgresql://localhost:5433/neuroforge_db
 spring.r2dbc.username=neuroforge_user
 spring.r2dbc.password=neuroforge_password
+
+# Логирование
+logging.level.com.aitstudgroup.ala_ata.demo=DEBUG
+logging.level.org.springframework.r2dbc=INFO
+
+# Настройки инициализации базы данных
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:schema.sql
