--- a/neuro-forge_front/package.json
+++ b/neuro-forge_front/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.5",
+    "axios": "^1.9.0",
     "phaser": "^3.88.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.3",
     "sass": "^1.87.0",
     "tailwindcss": "^4.1.5"
