--- a/neuro-forge_front/package.json
+++ b/neuro-forge_front/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -18,6 +18,8 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.3",
     "sass": "^1.87.0",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
