--- a/neuro-forge_front/package.json
+++ b/neuro-forge_front/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.3",
+    "recharts": "^2.15.3",
     "sass": "^1.87.0",
     "tailwindcss": "^4.1.5"
   },
