--- a/neuro-forge_front/package.json
+++ b/neuro-forge_front/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stomp/stompjs": "^7.1.1",
     "@tailwindcss/vite": "^4.1.5",
     "axios": "^1.9.0",
     "phaser": "^3.88.2",
@@ -17,6 +18,7 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.3",
+    "react-syntax-highlighter": "^15.6.1",
     "recharts": "^2.15.3",
     "sass": "^1.87.0",
     "sockjs-client": "^1.6.1",
