--- a/neuro-forge_front/package.json
+++ b/neuro-forge_front/package.json
@@ -20,7 +20,8 @@
     "recharts": "^2.15.3",
     "sass": "^1.87.0",
     "sockjs-client": "^1.6.1",
-    "stompjs": "^2.3.3",
+    "@stomp/stompjs": "^7.0.0",
+    "react-syntax-highlighter": "^15.5.0",
     "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
